[package]
name = "gedcomx_date"
version = "0.0.2"
authors = ["Nicolas Barbotte <nicolas@barbotte.net>"]

description = "Gedcomx Date Parser"

license = "MIT"
readme = "README.md"

[dependencies]
nom = {version = "2", features = ["verbose-errors"]}

clippy = {version = "~0.0.46", optional = true}

[features]
default = []
dev = ["clippy"]
bench = []
