[package]
name = "gedcomx_date"
version = "0.1.0"
authors = ["Nicolas Barbotte <nicolas@barbotte.net>"]

description = "Gedcomx Date Parser"

license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
nom = "7"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench"
harness = false
